--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,6 @@
         <h1 class="Title", id="MainTitle"><b>The Spotify Searcher</b></h1>
         <div class="container">
             <form method="post" class="form-group search-container">
-                <label for="song-name">Song Name</label>
                 <input type="text" id="song-name" class="form-control" name="song-input" placeholder="Enter song name" required>
                 <input type="number" class="form-control" id="result-qty" name="result-qty" placeholder="Number of result" min="2" max="20">            
                 <button class="btn btn-success">Search</button>
@@ -81,7 +80,7 @@
 
         </div>
         <h2 id="abouttitle" class="Title">About</h2>
-        <p class="Pharagraph">
+        <p class="Pharagraph" id="about-pharagraph">
             Search the song by using name and get the result up to 20 songs and the related link for the songs.
         </p>   
     </div>
