--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,9 @@
+@media (min-width: 768px) {
+    .container {
+        flex-direction: row;
+    }
+}
+
 #MainTitle {
     margin-top: 20px;
     color: #CACACA;
@@ -22,11 +28,10 @@
 }
 
 #search-BTN {
-    display: block;
-    margin-left: 290px;
-    margin-bottom: 50px;
-
+    display: flex;
+    margin: 30px auto;
 }
+
 #download-Title {
     display: flex;
     margin: 0;
@@ -36,9 +41,9 @@
 }
 
 #download-BTN {
-    display: block;
-    margin-left: 100px;
+    display: flex;
     margin-bottom: 30px;
+    margin-left: 5%;
 }
 
 .maincontainer {
