--- a/static/css/register.css
+++ b/static/css/register.css
@@ -4,7 +4,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 #register-btn {
@@ -13,13 +12,11 @@ body {
 }
 
 .Register-container {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    background-color: #202823;
+    margin: 5vw;
+    background-color: #202528;
     padding: 30px;
     border-radius: 20px;
-    width: 90%;
-    max-width: 450px;
+    width: 95%;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 
