--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block extra_css %} <link rel="stylesheet" href="{{ url_for ('static', filename='css/home.css') }}"> {% endblock %}
+{% block extra_css %} 
+    <link rel="stylesheet" href="{{ url_for ('static', filename='css/home.css') }}"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+{% endblock %}
 {% block title %}SpotLoader{% endblock %}
 
 {% block content %}
