--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
         <h2 class="text-center">Login</h2>
         <form action="/login" method="post">
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email" class="input-label">Email</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" required>
             </div>
             <div class="form-group">
