--- a/static/css/home.css
+++ b/static/css/home.css
@@ -72,7 +72,7 @@
     color: Black;
     font-family: "Arial Black";
     padding: 10px 0px;
-    width: 260px;
+    width: 50%;
     border: none;
     border-radius: 50px;
     font-size: 20px;
