--- a/static/css/download.css
+++ b/static/css/download.css
@@ -51,7 +51,7 @@ a:hover {
 }
 
 #downloading-progress {
-    display: block;
+    display: none;
     width: 50%; 
     height: 50px;
 }
@@ -61,7 +61,7 @@ a:hover {
 }
 
 #progress-precentage {
-    display: block;    
+    display: none;    
 }
 
 #about-pharagraph {
